--- a/account.html
+++ b/account.html
@@ -9,9 +9,9 @@
 </head>
 <body class="account">
    <div class="img-bal">
-    <div class="img">
+    <a href="profilepic.html"><div class="img">
 
-    </div> <p>Balance: <span  style=" color:rgb(4, 255, 4);">$ 1,500,000</span></p>
+    </div></a> <p>Balance: <span  style=" color:rgb(4, 255, 4);">$ 1,500,000</span></p>
    </div>
    <div class="bal">
 
